--- a/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
+++ b/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
@@ -280,6 +280,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 				</array>
 				<key>Misc.</key>
 				<array>
+					<string>AllowWebAuthnWithBrokenTlsCerts</string>
 					<string>RemoteDebuggingAllowed</string>
 					<string>StrictMimetypeCheckForWorkerScriptsEnabled</string>
 					<string>AbusiveExperienceInterventionEnforce</string>
@@ -3367,6 +3368,23 @@ For more information on Internet Explorer's SiteList policy: https://docs.micros
 			<string>string</string>
 			<key>pfm_value_placeholder</key>
 			<string>http://example.com/sitelist.xml</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>110</string>
+			<key>pfm_description</key>
+			<string>This policy will allow WebAuthn on sites with invalid TLS certificates.</string>
+			<key>pfm_description_reference</key>
+			<string>If set to Enabled, Google Chrome will allow Web Authentication requests on websites that have TLS certificates with errors (i.e. websites considered not secure). If the policy is set to Disabled or left unset, the default behavior of blocking such requests will apply.
+			</string>
+			<key>pfm_documentation_url</key>
+			<string>https://chromeenterprise.google/policies/#AllowWebAuthnWithBrokenTlsCerts</string>
+			<key>pfm_name</key>
+			<string>AllowWebAuthnWithBrokenTlsCerts</string>
+			<key>pfm_title</key>
+			<string>Allow web authentication requests on sites with broken TLS certificates</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
 		</dict>
 		<dict>
 			<key>pfm_app_min</key>
