--- a/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
+++ b/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
@@ -172,6 +172,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 				<key>Content Settings</key>
 				<array>
 					<string>PFC_SegmentedControl_ContentSettings</string>
+					<string>PdfLocalFileAccessAllowedForDomains</string>
 					<string>AutoSelectCertificateForUrls</string>
 					<string>CookiesAllowedForUrls</string>
 					<string>CookiesBlockedForUrls</string>
@@ -1516,6 +1517,31 @@ If this policy is left not set the global default value will be used for all sit
 			</array>
 			<key>pfm_title</key>
 			<string>Block popups on these sites</string>
+			<key>pfm_type</key>
+			<string>array</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>110</string>
+			<key>pfm_description</key>
+			<string>Setting this policy allows the domains listed to access file:// URLs in the PDF Viewer.</string>
+			<key>pfm_description_reference</key>
+			<string>Setting this policy allows the domains listed to access file:// URLs in the PDF Viewer. Adding to the policy allows the domain to access file:// URLs in the PDF Viewer. Removing from the policy disallows the domain from accessing file:// URLs in the PDF Viewer. Leaving the policy unset disallows all domains from accessing file:// URLs in the PDF Viewer.</string>
+			<key>pfm_documentation_url</key>
+			<string>https://cloud.google.com/docs/chrome-enterprise/policies/?policy=PdfLocalFileAccessAllowedForDomains</string>
+			<key>pfm_name</key>
+			<string>PdfLocalFileAccessAllowedForDomains</string>
+			<key>pfm_subkeys</key>
+			<array>
+				<dict>
+					<key>pfm_type</key>
+					<string>string</string>
+					<key>pfm_value_placeholder</key>
+					<string>example.com</string>
+				</dict>
+			</array>
+			<key>pfm_title</key>
+			<string>Allow local file access to file:// URLs on these sites in the PDF Viewer</string>
 			<key>pfm_type</key>
 			<string>array</string>
 		</dict>
