--- a/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
+++ b/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
@@ -281,6 +281,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 				</array>
 				<key>Misc.</key>
 				<array>
+					<string>DomainReliabilityAllowed</string>
 					<string>AllowWebAuthnWithBrokenTlsCerts</string>
 					<string>RemoteDebuggingAllowed</string>
 					<string>StrictMimetypeCheckForWorkerScriptsEnabled</string>
@@ -3394,6 +3395,23 @@ For more information on Internet Explorer's SiteList policy: https://docs.micros
 			<string>string</string>
 			<key>pfm_value_placeholder</key>
 			<string>http://example.com/sitelist.xml</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>111</string>
+			<key>pfm_description</key>
+			<string>This policy will allow sending domain reliability data to Google</string>
+			<key>pfm_description_reference</key>
+			<string>If this policy is set false, domain reliability diagnostic data reporting is disabled and no data is sent to Google. If this policy is set true or not set, domain reliability diagnostic data reporting will follow the behavior of MetricsReportingEnabled for Google Chrome or DeviceMetricsReportingEnabled for Google ChromeOS.
+			</string>
+			<key>pfm_documentation_url</key>
+			<string>https://chromeenterprise.google/policies/#DomainReliabilityAllowed</string>
+			<key>pfm_name</key>
+			<string>DomainReliabilityAllowed</string>
+			<key>pfm_title</key>
+			<string>Allow reporting of domain reliability related data</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
 		</dict>
 		<dict>
 			<key>pfm_app_min</key>
