--- a/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
+++ b/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
@@ -281,6 +281,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 				</array>
 				<key>Misc.</key>
 				<array>
+					<string>EncryptedClientHelloEnabled</string>
 					<string>DomainReliabilityAllowed</string>
 					<string>AllowWebAuthnWithBrokenTlsCerts</string>
 					<string>RemoteDebuggingAllowed</string>
@@ -3395,6 +3396,23 @@ For more information on Internet Explorer's SiteList policy: https://docs.micros
 			<string>string</string>
 			<key>pfm_value_placeholder</key>
 			<string>http://example.com/sitelist.xml</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>105</string>
+			<key>pfm_description</key>
+			<string>This policy will allow encryption of TLS ClientHello for enhanced privacy.</string>
+			<key>pfm_description_reference</key>
+			<string>Encrypted ClientHello (ECH) is an extension to TLS to encrypt sensitive fields of the ClientHello and improve privacy. If this policy is not configured, or is set to enabled, Google Chrome will follow the default rollout process for ECH. If it is disabled, Google Chrome will not enable ECH. When the feature is enabled, Google Chrome may or may not use ECH depending on server support, availability of the HTTPS DNS record, or rollout status.
+			</string>
+			<key>pfm_documentation_url</key>
+			<string>https://chromeenterprise.google/policies/#EncryptedClientHelloEnabled</string>
+			<key>pfm_name</key>
+			<string>EncryptedClientHelloEnabled</string>
+			<key>pfm_title</key>
+			<string>Enable TLS Encrypted ClientHello</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
 		</dict>
 		<dict>
 			<key>pfm_app_min</key>
