--- a/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
+++ b/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
@@ -281,6 +281,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 				</array>
 				<key>Misc.</key>
 				<array>
+					<string>EnterpriseProfileCreationKeepBrowsingData</string>
 					<string>EncryptedClientHelloEnabled</string>
 					<string>DomainReliabilityAllowed</string>
 					<string>AllowWebAuthnWithBrokenTlsCerts</string>
@@ -3396,6 +3397,23 @@ For more information on Internet Explorer's SiteList policy: https://docs.micros
 			<string>string</string>
 			<key>pfm_value_placeholder</key>
 			<string>http://example.com/sitelist.xml</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>106</string>
+			<key>pfm_description</key>
+			<string>This policy will allow keeping browsing data in new enterprise profiles</string>
+			<key>pfm_description_reference</key>
+			<string>If this policy is Enabled, the option to keep any existing browsing data when creating an enterprise profile will be checked by default. If this policy is unset or Disabled, the option to keep any existing browsing data when creating an enterprise profile will not be checked by default.
+			</string>
+			<key>pfm_documentation_url</key>
+			<string>https://chromeenterprise.google/policies/#EnterpriseProfileCreationKeepBrowsingData</string>
+			<key>pfm_name</key>
+			<string>EnterpriseProfileCreationKeepBrowsingData</string>
+			<key>pfm_title</key>
+			<string>Keep browsing data when creating enterprise profile by default</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
 		</dict>
 		<dict>
 			<key>pfm_app_min</key>
